Allow Ctrl-Click to exclude ingredient from request multiplier